# Mail-widgets-

./: README.md  package-lock.json  package.json
config/: google_oauth.example.json
electron/: main.mjs  preload.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
