[package]
name = "mail_widgets"
version = "0.1.0"
description = "Windows Gmail desktop widget"
authors = ["zoro-of-coding"]
edition = "2021"

[lib]
name = "mail_widgets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
keyring = { version = "3", default-features = false, features = ["windows-native"] }
rand = "0.8"
raw-window-handle = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
url = "2"
webbrowser = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging"
] }
